[tool.poetry]
name = "blog"
version = "0.1.0"
description = "This repository hosts the code for my personal blog, powered by GitHub Pages. It features my thoughts, projects, and insights on various topics. Feel free to explore and engage with the content."
authors = ["Malte Hedderich <github@hedderich.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
